# omplib

./: .gitignore  CMakeLists.txt  README.md  setup.py
data/CHUQSamples/: CH89_default.json
data/CHUQSamples/samples/: ch_0.json  ch_1.json  ch_10.json  ch_100.json  ch_101.json  ch_102.json  ch_103.json  ch_104.json  ch_105.json  ch_106.json  ch_107.json  ch_108.json  ch_109.json  ch_11.json  ch_110.json  ch_111.json  ch_112.json  ch_113.json  ch_114.json  ch_115.json  ch_116.json  ch_117.json  ch_118.json  ch_119.json  ch_12.json  ch_120.json  ch_121.json  ch_122.json  ch_123.json  ch_124.json  ch_125.json  ch_126.json  ch_127.json  ch_128.json  ch_129.json  ch_13.json  ch_130.json  ch_131.json  ch_132.json  ch_133.json  (+960 more)
data/KDUQSamples/samples/: kd_0.json  kd_1.json  kd_10.json  kd_100.json  kd_101.json  kd_102.json  kd_103.json  kd_104.json  kd_105.json  kd_106.json  kd_107.json  kd_108.json  kd_109.json  kd_11.json  kd_110.json  kd_111.json  kd_112.json  kd_113.json  kd_114.json  kd_115.json  kd_116.json  kd_117.json  kd_118.json  kd_119.json  kd_12.json  kd_120.json  kd_121.json  kd_122.json  kd_123.json  kd_124.json  kd_125.json  kd_126.json  kd_127.json  kd_128.json  kd_129.json  kd_13.json  kd_130.json  kd_131.json  kd_132.json  kd_133.json  (+960 more)
data/WLHSamples/: WLHDefault.json
data/WLHSamples/samples/: wlh_0.json  wlh_1.json  wlh_10.json  wlh_100.json  wlh_101.json  wlh_102.json  wlh_103.json  wlh_104.json  wlh_105.json  wlh_106.json  wlh_107.json  wlh_108.json  wlh_109.json  wlh_11.json  wlh_110.json  wlh_111.json  wlh_112.json  wlh_113.json  wlh_114.json  wlh_115.json  wlh_116.json  wlh_117.json  wlh_118.json  wlh_119.json  wlh_12.json  wlh_120.json  wlh_121.json  wlh_122.json  wlh_123.json  wlh_124.json  wlh_125.json  wlh_126.json  wlh_127.json  wlh_128.json  wlh_129.json  wlh_13.json  wlh_130.json  wlh_131.json  wlh_132.json  wlh_133.json  (+960 more)
docs/: CMakeLists.txt
examples/: wlh_xs.py
exec/: CMakeLists.txt  omplib.cpp
omplibpy/: CMakeLists.txt  omplibpy.cpp
src/: CMakeLists.txt  main.cpp  omplib.cpp
src/potential/: ch_params.cpp  ch_params.hpp  kd_params.cpp  kd_params.hpp  ompNeutron.cpp  ompNeutron.hpp  params.cpp  params.hpp  params_base.cpp  params_base.hpp  potential.hpp  radCoordBasis.hpp  wlh_params.cpp  wlh_params.hpp
src/solver/: channel.hpp  rmatrix.hpp  scatter.hpp
src/util/: asymptotics.hpp  config.hpp  constants.hpp  factorial.cpp  factorial.hpp  gauss_legendre_weights.hpp  lagrange_legendre.hpp  nuc_data.hpp  spherical_harmonics.cpp  spherical_harmonics.hpp  types.hpp
test/: CMakeLists.txt  lagrange_legendre.cpp  test_channel.cpp  test_example.cpp  test_factorial.cpp  test_gauss_legendre.cpp  test_read_json.cpp  test_spherical_harmonics.cpp  test_yamaguchi.cpp
tools/: readDataFrame.py
